# video-service

./: .gitignore  ARCHITECTURE.md  Dockerfile  HANDLER_UPDATES.md  LLM_INTEGRATION.md  README.md  TASK_0.md  TASK_1.md  config.py  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  main.py  main_new.py  motion-analysis-spec.md  optimization-strategy.md  pipeline-redesign.md  pyproject.toml  sample.env  task.md  test_integration.py  test_viral_integration.py  test_viral_moments.py  test_yamnet.py
.streamlit/: config.toml
api/: __init__.py  celery_app.py  main.py
config/: __init__.py  model_manager.py  settings.py
core/: __init__.py  base_handler.py  chunk_processor.py  dag_executor.py  pipeline.py  quality_gates.py
docs/: PROJECT_ANALYSIS.md
features/audio/: __init__.py  audio_events_handler.py  audio_features_handler.py  laughter_detection_yamnet_handler.py  speech_quality_handler.py
features/chapters/: chapter_builder_handler.py
features/file_io/: ffmpeg_extract_handler.py  read_file_handler.py  video_meta_handler.py
features/finalize/: finalize_analysis_handler.py
features/fusion/: candidate_selection_handler.py  fusion_timeline_handler.py
features/highlights/: highlight_detection_handler.py  viral_moments_handler.py
features/motion/: motion_analysis_frame_diff_handler.py
features/nlp/: block_analysis_handler.py  humor_detection_handler.py  llm_refine_candidates_handler.py  sentiment_analysis_handler.py  speech_to_text_handler.py  topic_segmentation_handler.py
features/scenes/: scene_detection_handler.py
handlers/: __init__.py  audio_events_handler.py  audio_features_handler.py  base_handler.py  chapter_builder_handler.py  ffmpeg_extract_handler.py  finalize_analysis_handler.py  fusion_timeline_handler.py  highlight_detection_handler.py  humor_detection_handler.py  motion_analysis_background_sub_handler.py  motion_analysis_frame_diff_handler.py  motion_analysis_optical_flow_handler.py  read_file_handler.py  scene_change_handler.py  scene_detection_handler.py  scene_grouping_handler.py  sentiment_analysis_handler.py  shot_boundary_handler.py  speech_to_text_handler.py  timeseries.py  topic_segmentation_handler.py  video_meta_handler.py
io/: __init__.py  artifacts_store.py  cli.py
llm/: __init__.py  base.py  null_client.py  ollama_client.py  prompts.py  schemas.py  settings.py
ml/: yamnet_client.py
models/: __init__.py  artifacts.py  candidates.py  chapters.py  common.py  contracts.py  highlights.py  humor_model.py  keys.py  pipeline_state.py  results.py  serde.py  state.py  timeline.py  viral_moments.py
tests/: __init__.py  conftest.py  test_block_analysis.py  test_dag_executor.py  test_llm_handlers.py  test_models.py  test_scoring.py
ui/: __init__.py  app.py
utils/: __init__.py  timeseries.py  truncation.py
