[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-service"
version = "2.0.0"
description = "Video analysis pipeline with handler-based architecture and viral moment detection"
requires-python = ">=3.11,<3.13"
dependencies = [
  # Core
  "numpy>=1.23.0",
  "scipy>=1.9.0",

  # Video Processing
  "opencv-python>=4.8.0",
  "scenedetect>=0.6.0",

  # Audio Processing
  "librosa>=0.10.2",
  "soundfile>=0.12.0",
  "numba>=0.60.0",

  # Speech-to-Text
  "faster-whisper>=1.0.0",

  # NLP / Transformers
  "transformers>=4.35.0",
  "sentencepiece>=0.1.99",
  "tokenizers>=0.15.0",
  "textblob>=0.17.1",

  # YAMNet
  "tensorflow>=2.14.0",
  "tensorflow-hub>=0.15.0",

  # LLM Client
  "openai>=1.3.0",
  "httpx>=0.25.0",

  # Configuration
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",

  # Utilities
  "tqdm>=4.66.0",
  "colorama>=0.4.6",
  "ffmpeg-python>=0.2.0",

  # API & Web
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-multipart>=0.0.6",

  # Background Tasks
  "celery>=5.3.0",
  "redis>=5.0.0",

  # UI
  "streamlit>=1.28.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-redis>=4.6.0",
]

cuda = [
  # Install separately:
  # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
]

[tool.setuptools]
packages = ["core", "models", "config", "utils", "io", "features", "api", "ui", "llm", "ml"]

[project.scripts]
video-service = "main:main"

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Включаем постепенно
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

# Строгие настройки для core и models
[[tool.mypy.overrides]]
module = ["models.*", "core.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Игнорируем внешние библиотеки
[[tool.mypy.overrides]]
module = [
  "cv2.*",
  "librosa.*",
  "soundfile.*",
  "tensorflow.*",
  "tensorflow_hub.*",
  "transformers.*",
  "faster_whisper.*",
  "scenedetect.*",
  "celery.*",
  "streamlit.*",
]
ignore_missing_imports = true

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "*.egg-info",
  ".mypy_cache",
  ".pytest_cache",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "ARG001", # unused function argument (often intentional in handlers)
  "SIM108", # use ternary operator (not always more readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "config", "utils", "features", "api", "io"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "gpu: marks tests that require GPU",
]
asyncio_mode = "auto"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["core", "models", "features"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
